# keycloak-rs

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
docker/keycloak/: Dockerfile  keycloak.conf
src/: admin.rs  clients.rs  credentials.rs  lib.rs  models.rs  openid.rs  realm.rs
